// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Travel Aller Retour 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <section
      className="travel"
    >
      <div
        className="travel__header"
      >
        <h1
          className="travel__header-title"
        >
          Lille ⇄ Nantes
        </h1>
        <p
          className="css-1rn2cu4-Price travel__header-price"
          data-price-currency="EUR"
          data-price-value={105.6}
        >
          105
          <span
            className="css-8pvupu-Price"
          >
            , 
            60
             
            €
          </span>
        </p>
      </div>
      <div
        className="travel__details"
      >
        <h2
          className="travel__details-date"
        >
          Aller le 
          <b>
            12/09/2018 à 10h35
          </b>
        </h2>
        <h2
          className="travel__details-date"
        >
          Retour le 
          <b>
            14/09/2018 à 18h12
          </b>
        </h2>
        <p
          className="travel__details-passengers"
        >
          2
           
          passagers
        </p>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Travel Aller Retour Asymetrique 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <section
      className="travel"
    >
      <div
        className="travel__header"
      >
        <h1
          className="travel__header-title travel__header-title--asymetrical-roundtrip"
        >
          Lille ➝ Nantes
           ● Nantes ➝ Paris
        </h1>
        <p
          className="css-1rn2cu4-Price travel__header-price"
          data-price-currency="EUR"
          data-price-value={105.6}
        >
          105
          <span
            className="css-8pvupu-Price"
          >
            , 
            60
             
            €
          </span>
        </p>
      </div>
      <div
        className="travel__details"
      >
        <h2
          className="travel__details-date"
        >
          Aller le 
          <b>
            12/09/2018 à 10h35
          </b>
        </h2>
        <h2
          className="travel__details-date"
        >
          Retour le 
          <b>
            18/09/2018 à 18h12
          </b>
        </h2>
        <p
          className="travel__details-passengers"
        >
          1
           
          passager
        </p>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Travel Aller Simple 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <section
      className="travel"
    >
      <div
        className="travel__header"
      >
        <h1
          className="travel__header-title"
        >
          Lille ➝ Nantes
        </h1>
        <p
          className="css-1rn2cu4-Price travel__header-price"
          data-price-currency="EUR"
          data-price-value={105.6}
        >
          105
          <span
            className="css-8pvupu-Price"
          >
            , 
            60
             
            €
          </span>
        </p>
      </div>
      <div
        className="travel__details"
      >
        <h2
          className="travel__details-date"
        >
          Départ le 
          <b>
            12/09/2018 à 10h35
          </b>
        </h2>
        <p
          className="travel__details-passengers"
        >
          1
           
          passager
        </p>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Travel Multiples Trajets 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <div
      style={
        Object {
          "margin": "0.3rem",
        }
      }
    >
      <section
        className="travel"
      >
        <div
          className="travel__header"
        >
          <h1
            className="travel__header-title"
          >
            Lille ➝ Nantes
          </h1>
          <p
            className="css-1rn2cu4-Price travel__header-price"
            data-price-currency="EUR"
            data-price-value={105.6}
          >
            105
            <span
              className="css-8pvupu-Price"
            >
              , 
              60
               
              €
            </span>
          </p>
        </div>
        <div
          className="travel__details"
        >
          <h2
            className="travel__details-date"
          >
            Départ le 
            <b>
              12/09/2018 à 10h35
            </b>
          </h2>
          <p
            className="travel__details-passengers"
          >
            1
             
            passager
          </p>
        </div>
      </section>
    </div>
    <div
      style={
        Object {
          "margin": "0.3rem",
        }
      }
    >
      <section
        className="travel"
      >
        <div
          className="travel__header"
        >
          <h1
            className="travel__header-title"
          >
            Lille ⇄ Nantes
          </h1>
          <p
            className="css-1rn2cu4-Price travel__header-price"
            data-price-currency="EUR"
            data-price-value={105.6}
          >
            105
            <span
              className="css-8pvupu-Price"
            >
              , 
              60
               
              €
            </span>
          </p>
        </div>
        <div
          className="travel__details"
        >
          <h2
            className="travel__details-date"
          >
            Aller le 
            <b>
              12/09/2018 à 10h35
            </b>
          </h2>
          <h2
            className="travel__details-date"
          >
            Retour le 
            <b>
              14/09/2018 à 18h12
            </b>
          </h2>
          <p
            className="travel__details-passengers"
          >
            2
             
            passagers
          </p>
        </div>
      </section>
    </div>
    <div
      style={
        Object {
          "margin": "0.3rem",
        }
      }
    >
      <section
        className="travel"
      >
        <div
          className="travel__header"
        >
          <h1
            className="travel__header-title travel__header-title--asymetrical-roundtrip"
          >
            Lille ➝ Nantes
             ● Nantes ➝ Paris
          </h1>
          <p
            className="css-1rn2cu4-Price travel__header-price"
            data-price-currency="GBP"
            data-price-value={98.5}
          >
            98
            <span
              className="css-8pvupu-Price"
            >
              , 
              50
               
              £
            </span>
          </p>
        </div>
        <div
          className="travel__details"
        >
          <h2
            className="travel__details-date"
          >
            Aller le 
            <b>
              12/09/2018 à 10h35
            </b>
          </h2>
          <h2
            className="travel__details-date"
          >
            Retour le 
            <b>
              18/09/2018 à 18h12
            </b>
          </h2>
          <p
            className="travel__details-passengers"
          >
            1
             
            passager
          </p>
        </div>
      </section>
    </div>
  </div>
</div>
`;
